Updates to standard projects

--- a/Prevu.Localization/Properties/Resources.ar.resx
+++ b/Prevu.Localization/Properties/Resources.ar.resx
@@ -118,28 +118,28 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="GRINDING" xml:space="preserve">
-    <value>طحن </value>
+    <value>طحن</value>
   </data>
   <data name="PLANT CONTROL" xml:space="preserve">
-    <value>مراقبة المصنع</value>
+    <value>السيطرة النباتية</value>
   </data>
   <data name="SYNOPTIC PAGE MISSING!" xml:space="preserve">
-    <value>الصفحة السينوبتيكية مفقودة!</value>
+    <value>صفحة سينوبتيك  مفقودة!</value>
   </data>
   <data name="CURRENT EVENTS" xml:space="preserve">
     <value>الاحداث الحالية</value>
   </data>
   <data name="START" xml:space="preserve">
-    <value>بداية</value>
+    <value>يبدأ</value>
   </data>
   <data name="STOP" xml:space="preserve">
     <value>قف</value>
   </data>
   <data name="OPEN LOCAL DISCONNECT" xml:space="preserve">
-    <value>افتح Local Disconnect</value>
+    <value>فتح قطع الاتصال المحلي</value>
   </data>
   <data name="EMERGENCY BUTTON PRESSED" xml:space="preserve">
-    <value>الضغط على زر الطوارئ</value>
+    <value>ضغط زر الطوارئ</value>
   </data>
   <data name="SELECT OPERATING MODE" xml:space="preserve">
     <value>حدد وضع التشغيل</value>
@@ -162,8 +162,8 @@
   <data name="CHOOSE DATE" xml:space="preserve">
     <value>اختر موعدا</value>
   </data>
-  <data name="PET_CLEAR" xml:space="preserve">
-    <value>مسح PET</value>
+  <data name="CLEAR PET" xml:space="preserve">
+    <value>واضح الحيوانات الأليفة</value>
   </data>
   <data name="DISABLE" xml:space="preserve">
     <value>إبطال</value>
@@ -174,8 +174,8 @@
   <data name="CHOOSE THE ACTION" xml:space="preserve">
     <value>اختر الإجراء</value>
   </data>
-  <data name="PLANT LINE 2" xml:space="preserve">
-    <value>خط المصنع 2</value>
+  <data name="PLANT LINE" xml:space="preserve">
+    <value>خط النبات</value>
   </data>
   <data name="PRODUCTION LINE" xml:space="preserve">
     <value>خط الإنتاج</value>
@@ -193,7 +193,7 @@
     <value>PLC</value>
   </data>
   <data name="MACHINE MAP" xml:space="preserve">
-    <value>خريطة الآلة</value>
+    <value>آلة آلة</value>
   </data>
   <data name="TRENDS" xml:space="preserve">
     <value>اتجاهات</value>
@@ -211,16 +211,16 @@
     <value>أوامر</value>
   </data>
   <data name="PARAMETERS" xml:space="preserve">
-    <value>المعلمات</value>
+    <value>العوامل</value>
   </data>
   <data name="MAINTENANCE" xml:space="preserve">
-    <value>صيانة</value>
+    <value>اعمال صيانة</value>
   </data>
   <data name="ACTUAL" xml:space="preserve">
     <value>فعلي</value>
   </data>
   <data name="LOGGED" xml:space="preserve">
-    <value>مسجّل</value>
+    <value>تسجيل الدخول</value>
   </data>
   <data name="ACTIVE" xml:space="preserve">
     <value>نشيط</value>
@@ -235,10 +235,10 @@
     <value>عناصر</value>
   </data>
   <data name="SEARCH" xml:space="preserve">
-    <value>يبحث</value>
+    <value>بحث</value>
   </data>
   <data name="SELECT COMPONENTS" xml:space="preserve">
-    <value>حدد المكونات</value>
+    <value>حدد مكونات</value>
   </data>
   <data name="COMPONENT NAME" xml:space="preserve">
     <value>اسم المكون</value>
@@ -250,13 +250,13 @@
     <value>تاريخ</value>
   </data>
   <data name="NO ALARMS OR MESSAGES" xml:space="preserve">
-    <value>لا تنبيهات أو رسائل</value>
+    <value>لا أجهزة الإنذار أو الرسائل</value>
   </data>
   <data name="CHOOSE TRENDS" xml:space="preserve">
-    <value>اختر الاتجاهات</value>
+    <value>اختيار الاتجاهات</value>
   </data>
   <data name="SWITCH VIEW" xml:space="preserve">
-    <value>عرض التبديل</value>
+    <value>تبديل عرض</value>
   </data>
   <data name="CLEAR ALL" xml:space="preserve">
     <value>امسح الكل</value>
@@ -292,7 +292,7 @@
     <value>إنشاء مستخدم جديد</value>
   </data>
   <data name="USERS" xml:space="preserve">
-    <value>المستخدمون</value>
+    <value>المستخدمين</value>
   </data>
   <data name="MANAGE USER" xml:space="preserve">
     <value>إدارة المستخدم</value>
@@ -304,7 +304,7 @@
     <value>الاسم بالكامل</value>
   </data>
   <data name="EMAIL" xml:space="preserve">
-    <value>بريد إلكتروني</value>
+    <value>بريد الالكتروني</value>
   </data>
   <data name="PHONE NUMBER" xml:space="preserve">
     <value>رقم الهاتف</value>
@@ -315,7 +315,67 @@
   <data name="SYSTEM PERMISSIONS" xml:space="preserve">
     <value>أذونات النظام</value>
   </data>
-  <data name="_SYS_24VPWR_CAB_OFF" xml:space="preserve">
-    <value>TTTTT</value>
+  <data name="START PROCESS" xml:space="preserve">
+    <value>بدء العملية</value>
+  </data>
+  <data name="VIEW" xml:space="preserve">
+    <value>رأي</value>
+  </data>
+  <data name="SETTINGS" xml:space="preserve">
+    <value>إعدادات</value>
+  </data>
+  <data name="PLANT" xml:space="preserve">
+    <value>مصنع</value>
+  </data>
+  <data name="GROUP" xml:space="preserve">
+    <value>مجموعة</value>
+  </data>
+  <data name="LINE" xml:space="preserve">
+    <value>خط</value>
+  </data>
+  <data name="ZONE" xml:space="preserve">
+    <value>منطقة</value>
+  </data>
+  <data name="CABINET" xml:space="preserve">
+    <value>خزانة</value>
+  </data>
+  <data name="SUBZONE" xml:space="preserve">
+    <value>المنطقة الفرعية</value>
+  </data>
+  <data name="LEVEL" xml:space="preserve">
+    <value>مستوى</value>
+  </data>
+  <data name="ACTUAL SPEED" xml:space="preserve">
+    <value>السرعة الفعلية</value>
+  </data>
+  <data name="ACTUAL CURRENT" xml:space="preserve">
+    <value>الحالي الفعلي</value>
+  </data>
+  <data name="ACTUAL LEVEL" xml:space="preserve">
+    <value>المستوى الفعلي</value>
+  </data>
+  <data name="CURRENT" xml:space="preserve">
+    <value>تيار</value>
+  </data>
+  <data name="SPEED" xml:space="preserve">
+    <value>سرعة</value>
+  </data>
+  <data name="ZONE VIEW" xml:space="preserve">
+    <value>عرض المنطقة</value>
+  </data>
+  <data name="CREATE NEW GROUP" xml:space="preserve">
+    <value>إنشاء مجموعة جديدة</value>
+  </data>
+  <data name="COPY FROM GROUP" xml:space="preserve">
+    <value>نسخة من المجموعة</value>
+  </data>
+  <data name="GROUP NAME" xml:space="preserve">
+    <value>أسم المجموعة</value>
+  </data>
+  <data name="MANAGE GROUP" xml:space="preserve">
+    <value>إدارة المجموعات</value>
+  </data>
+  <data name="DRYERS" xml:space="preserve">
+    <value>مجففات</value>
   </data>
 </root>
