--- a/Prevu.Localization/Properties/Resources.de.resx
+++ b/Prevu.Localization/Properties/Resources.de.resx
@@ -121,7 +121,7 @@
     <value>Mahlen</value>
   </data>
   <data name="PLANT CONTROL" xml:space="preserve">
-    <value>Pflanzenkontrolle</value>
+    <value>Anlagenkontrolle</value>
   </data>
   <data name="SYNOPTIC PAGE MISSING!" xml:space="preserve">
     <value>Synoptische Seite fehlt!</value>
@@ -130,22 +130,22 @@
     <value>Aktuelle Ereignisse</value>
   </data>
   <data name="START" xml:space="preserve">
-    <value>START</value>
+    <value>Start</value>
   </data>
   <data name="STOP" xml:space="preserve">
-    <value>STOPP</value>
+    <value>Halt</value>
   </data>
   <data name="OPEN LOCAL DISCONNECT" xml:space="preserve">
-    <value>Öffnen Sie Local Disconnect</value>
+    <value>Öffnen Sie lokale Trennen</value>
   </data>
   <data name="EMERGENCY BUTTON PRESSED" xml:space="preserve">
-    <value>Notruftaste gedrückt</value>
+    <value>Not-Taste gedrückt</value>
   </data>
   <data name="SELECT OPERATING MODE" xml:space="preserve">
-    <value>Betriebsart auswählen</value>
+    <value>Wählen Sie den Betriebsmodus aus</value>
   </data>
   <data name="CANCEL" xml:space="preserve">
-    <value>STORNIEREN</value>
+    <value>Abbrechen</value>
   </data>
   <data name="END TIME" xml:space="preserve">
     <value>Endzeit</value>
@@ -154,40 +154,40 @@
     <value>Veranstaltungen</value>
   </data>
   <data name="OK" xml:space="preserve">
-    <value>OK</value>
+    <value>Okay</value>
   </data>
   <data name="START TIME" xml:space="preserve">
     <value>Startzeit</value>
   </data>
   <data name="CHOOSE DATE" xml:space="preserve">
-    <value>Wählen Sie Datum</value>
+    <value>Datum wählen</value>
   </data>
-  <data name="PET_CLEAR" xml:space="preserve">
-    <value>Klares PET</value>
+  <data name="CLEAR PET" xml:space="preserve">
+    <value>Klares Haustier</value>
   </data>
   <data name="DISABLE" xml:space="preserve">
-    <value>DEAKTIVIEREN</value>
+    <value>Deaktivieren</value>
   </data>
   <data name="OTHER" xml:space="preserve">
-    <value>ANDERE</value>
+    <value>Sonstiges</value>
   </data>
   <data name="CHOOSE THE ACTION" xml:space="preserve">
-    <value>Wählen Sie die Aktion</value>
+    <value>Wählen Sie die Aktion aus</value>
   </data>
-  <data name="PLANT LINE 2" xml:space="preserve">
-    <value>Pflanzenlinie 2</value>
+  <data name="PLANT LINE" xml:space="preserve">
+    <value>Pflanzenlinie</value>
   </data>
   <data name="PRODUCTION LINE" xml:space="preserve">
     <value>Fließband</value>
   </data>
   <data name="RESET" xml:space="preserve">
-    <value>RESET</value>
+    <value>Zurücksetzen</value>
   </data>
   <data name="ACKNOWLEDGE ALL" xml:space="preserve">
-    <value>ANERKENNEN ALLE</value>
+    <value>Alle anerkennen</value>
   </data>
   <data name="ACKNOWLEDGE" xml:space="preserve">
-    <value>BESTÄTIGEN</value>
+    <value>Anerkennen</value>
   </data>
   <data name="PLC" xml:space="preserve">
     <value>SPS</value>
@@ -220,12 +220,162 @@
     <value>Tatsächlich</value>
   </data>
   <data name="LOGGED" xml:space="preserve">
-    <value>Protokolliert</value>
+    <value>Angemeldet</value>
   </data>
   <data name="ACTIVE" xml:space="preserve">
     <value>Aktiv</value>
   </data>
   <data name="PRODUCTION" xml:space="preserve">
     <value>Produktion</value>
+  </data>
+  <data name="ADD" xml:space="preserve">
+    <value>Hinzufügen</value>
+  </data>
+  <data name="CHANGE WIRELESS CARD" xml:space="preserve">
+    <value>Drahtlose Karte ändern</value>
+  </data>
+  <data name="CHOOSE TRENDS" xml:space="preserve">
+    <value>Trends auswählen</value>
+  </data>
+  <data name="CLEAR ALL" xml:space="preserve">
+    <value>Alles löschen</value>
+  </data>
+  <data name="COMPONENT NAME" xml:space="preserve">
+    <value>Komponentenname</value>
+  </data>
+  <data name="COMPONENTS" xml:space="preserve">
+    <value>Bauteile</value>
+  </data>
+  <data name="CONFIRM" xml:space="preserve">
+    <value>Bestätigen Sie</value>
+  </data>
+  <data name="COPY FROM USER" xml:space="preserve">
+    <value>Vom Benutzer kopieren</value>
+  </data>
+  <data name="CREATE NEW USER" xml:space="preserve">
+    <value>Neuen Benutzer erstellen</value>
+  </data>
+  <data name="DATE" xml:space="preserve">
+    <value>Datum</value>
+  </data>
+  <data name="DELETE" xml:space="preserve">
+    <value>Löschen</value>
+  </data>
+  <data name="DELETE USER" xml:space="preserve">
+    <value>Benutzer löschen</value>
+  </data>
+  <data name="EMAIL" xml:space="preserve">
+    <value>Email</value>
+  </data>
+  <data name="FULL NAME" xml:space="preserve">
+    <value>Vollständiger Name</value>
+  </data>
+  <data name="GROUPS" xml:space="preserve">
+    <value>Gruppen</value>
+  </data>
+  <data name="INFO" xml:space="preserve">
+    <value>Die Info</value>
+  </data>
+  <data name="MANAGE USER" xml:space="preserve">
+    <value>Benutzer verwalten</value>
+  </data>
+  <data name="NO ALARMS OR MESSAGES" xml:space="preserve">
+    <value>Keine Alarme oder Nachrichten</value>
+  </data>
+  <data name="PHONE NUMBER" xml:space="preserve">
+    <value>Telefonnummer</value>
+  </data>
+  <data name="PLACE THE NEW CARD ON THE READER" xml:space="preserve">
+    <value>Platzieren Sie die neue Karte auf den Leser</value>
+  </data>
+  <data name="SAVE" xml:space="preserve">
+    <value>Speichern</value>
+  </data>
+  <data name="SEARCH" xml:space="preserve">
+    <value>Suche</value>
+  </data>
+  <data name="SELECT COMPONENTS" xml:space="preserve">
+    <value>Komponenten auswählen</value>
+  </data>
+  <data name="START PROCESS" xml:space="preserve">
+    <value>Starten Sie den Prozess</value>
+  </data>
+  <data name="SWITCH VIEW" xml:space="preserve">
+    <value>Schalter ansehen</value>
+  </data>
+  <data name="SYSTEM PERMISSIONS" xml:space="preserve">
+    <value>Systemberechtigungen</value>
+  </data>
+  <data name="UNDO" xml:space="preserve">
+    <value>Rückgängig machen</value>
+  </data>
+  <data name="USER NAME" xml:space="preserve">
+    <value>Nutzername</value>
+  </data>
+  <data name="USERS" xml:space="preserve">
+    <value>Benutzer</value>
+  </data>
+  <data name="VIEW" xml:space="preserve">
+    <value>Sicht</value>
+  </data>
+  <data name="WIRELESS CARD" xml:space="preserve">
+    <value>Drahtlose Karte</value>
+  </data>
+  <data name="SETTINGS" xml:space="preserve">
+    <value>Einstellungen</value>
+  </data>
+  <data name="PLANT" xml:space="preserve">
+    <value>Anlage</value>
+  </data>
+  <data name="GROUP" xml:space="preserve">
+    <value>Gruppe</value>
+  </data>
+  <data name="LINE" xml:space="preserve">
+    <value>Leitung</value>
+  </data>
+  <data name="ZONE" xml:space="preserve">
+    <value>Zone</value>
+  </data>
+  <data name="CABINET" xml:space="preserve">
+    <value>Kabinett</value>
+  </data>
+  <data name="SUBZONE" xml:space="preserve">
+    <value>Subzone</value>
+  </data>
+  <data name="LEVEL" xml:space="preserve">
+    <value>Niveau</value>
+  </data>
+  <data name="ACTUAL SPEED" xml:space="preserve">
+    <value>Tatsächliche Geschwindigkeit</value>
+  </data>
+  <data name="ACTUAL CURRENT" xml:space="preserve">
+    <value>Tatsächlicher Strom</value>
+  </data>
+  <data name="ACTUAL LEVEL" xml:space="preserve">
+    <value>Aktuelles Niveau</value>
+  </data>
+  <data name="CURRENT" xml:space="preserve">
+    <value>Strom</value>
+  </data>
+  <data name="SPEED" xml:space="preserve">
+    <value>Geschwindigkeit</value>
+  </data>
+  <data name="ZONE VIEW" xml:space="preserve">
+    <value>Zone-Ansicht</value>
+  </data>
+  <data name="CREATE NEW GROUP" xml:space="preserve">
+    <value>neue Gruppe erstellen</value>
+  </data>
+  <data name="COPY FROM GROUP" xml:space="preserve">
+    <value>Kopieren Sie von der Gruppe</value>
+  </data>
+  <data name="GROUP NAME" xml:space="preserve">
+    <value>Gruppenname</value>
+  </data>
+  <data name="MANAGE GROUP" xml:space="preserve">
+    <value>Gruppen verwalten</value>
+  </data>
+  <data name="DRYERS" xml:space="preserve">
+    <value>Trockner</value>
   </data>
 </root>
