--- a/Prevu.Localization/Properties/Resources.it.resx
+++ b/Prevu.Localization/Properties/Resources.it.resx
@@ -157,12 +157,12 @@
     <value>Ok</value>
   </data>
   <data name="START TIME" xml:space="preserve">
-    <value>Inizio Tempo</value>
+    <value>Tempo d'Inizio</value>
   </data>
   <data name="CHOOSE DATE" xml:space="preserve">
     <value>Scegli Data</value>
   </data>
-  <data name="PET_CLEAR" xml:space="preserve">
+  <data name="CLEAR PET" xml:space="preserve">
     <value>PET Chiaro</value>
   </data>
   <data name="DISABLE" xml:space="preserve">
@@ -174,8 +174,8 @@
   <data name="CHOOSE THE ACTION" xml:space="preserve">
     <value>Scegli l'azione</value>
   </data>
-  <data name="PLANT LINE 2" xml:space="preserve">
-    <value>Linea Impianto 2</value>
+  <data name="PLANT LINE" xml:space="preserve">
+    <value>Linea Impianto</value>
   </data>
   <data name="PRODUCTION LINE" xml:space="preserve">
     <value>Linea di Produzione</value>
@@ -298,7 +298,7 @@
     <value>Gestisci Utente</value>
   </data>
   <data name="UNDO" xml:space="preserve">
-    <value>Indietro</value>
+    <value>Annulla</value>
   </data>
   <data name="FULL NAME" xml:space="preserve">
     <value>Nome Completo</value>
@@ -315,13 +315,193 @@
   <data name="SYSTEM PERMISSIONS" xml:space="preserve">
     <value>Permessi di Sistema</value>
   </data>
-  <data name="_SYS_24VPWR_CAB_OFF" xml:space="preserve">
-    <value>System 24V Power to Cabinet OFF</value>
-  </data>
   <data name="VIEW" xml:space="preserve">
     <value>Visualizza</value>
   </data>
   <data name="START PROCESS" xml:space="preserve">
     <value>Avvia Processo</value>
+  </data>
+  <data name="SETTINGS" xml:space="preserve">
+    <value>Impostazioni</value>
+  </data>
+  <data name="PLANT" xml:space="preserve">
+    <value>Impianto</value>
+  </data>
+  <data name="GROUP" xml:space="preserve">
+    <value>Gruppo</value>
+  </data>
+  <data name="LINE" xml:space="preserve">
+    <value>Linea</value>
+  </data>
+  <data name="ZONE" xml:space="preserve">
+    <value>Zona</value>
+  </data>
+  <data name="SUBZONE" xml:space="preserve">
+    <value>Sottozona</value>
+  </data>
+  <data name="CABINET" xml:space="preserve">
+    <value>Quadro</value>
+  </data>
+  <data name="LEVEL" xml:space="preserve">
+    <value>Livello</value>
+  </data>
+  <data name="ACTUAL CURRENT" xml:space="preserve">
+    <value>Corrente Attuale</value>
+  </data>
+  <data name="ACTUAL LEVEL" xml:space="preserve">
+    <value>Livello Attuale</value>
+  </data>
+  <data name="ACTUAL SPEED" xml:space="preserve">
+    <value>Velocità Attuale</value>
+  </data>
+  <data name="CURRENT" xml:space="preserve">
+    <value>Corrente</value>
+  </data>
+  <data name="SPEED" xml:space="preserve">
+    <value>Velocità</value>
+  </data>
+  <data name="ZONE VIEW" xml:space="preserve">
+    <value>Vista Zone</value>
+  </data>
+  <data name="COPY FROM GROUP" xml:space="preserve">
+    <value>Copia Gruppo</value>
+  </data>
+  <data name="CREATE NEW GROUP" xml:space="preserve">
+    <value>Crea Nuovo Gruppo</value>
+  </data>
+  <data name="GROUP NAME" xml:space="preserve">
+    <value>Nome del Gruppo</value>
+  </data>
+  <data name="MANAGE GROUP" xml:space="preserve">
+    <value>Gestisci Gruppo</value>
+  </data>
+  <data name="DRYERS" xml:space="preserve">
+    <value>Essicatori</value>
+  </data>
+  <data name="DELETE CURRENT USER?" xml:space="preserve">
+    <value>Eliminare questo utente?</value>
+  </data>
+  <data name="THIS USER WILL BE DELETED FROM ALL MACHINES." xml:space="preserve">
+    <value>Questo utente sarà eliminato da tutte le macchine.</value>
+  </data>
+  <data name="THIS ACTION CANNOT BE UNDONE" xml:space="preserve">
+    <value>Questa azione non può essere annullata</value>
+  </data>
+  <data name="THIS GROUP WILL BE DELETED FROM ALL MACHINES." xml:space="preserve">
+    <value>Questo gruppo sarà eliminato da tutte le macchine.</value>
+  </data>
+  <data name="DELETE CURRENT GROUP?" xml:space="preserve">
+    <value>Eliminare questo gruppo?</value>
+  </data>
+  <data name="MANAGE PARAMETERS" xml:space="preserve">
+    <value>Gestisci Parametetri</value>
+  </data>
+  <data name="COMPONENT SEARCH" xml:space="preserve">
+    <value>Cerca Componenti</value>
+  </data>
+  <data name="LIMITS" xml:space="preserve">
+    <value>Limiti</value>
+  </data>
+  <data name="SELECT TRENDS" xml:space="preserve">
+    <value>Seleziona i Grafici</value>
+  </data>
+  <data name="1 HOUR" xml:space="preserve">
+    <value>1 Ora</value>
+  </data>
+  <data name="12 HOURS" xml:space="preserve">
+    <value>12 Ore</value>
+  </data>
+  <data name="15 MINUTES" xml:space="preserve">
+    <value>15 Minuti</value>
+  </data>
+  <data name="2 HOURS" xml:space="preserve">
+    <value>2 Ore</value>
+  </data>
+  <data name="24 HOURS" xml:space="preserve">
+    <value>24 Ore</value>
+  </data>
+  <data name="30 MINUTES" xml:space="preserve">
+    <value>30 Minuti</value>
+  </data>
+  <data name="4 HOURS" xml:space="preserve">
+    <value>4 Ore</value>
+  </data>
+  <data name="5 MINUTES" xml:space="preserve">
+    <value>5 Minuti</value>
+  </data>
+  <data name="8 HOURS" xml:space="preserve">
+    <value>8 Ore</value>
+  </data>
+  <data name="MAX VALUE" xml:space="preserve">
+    <value>Valore Massimo</value>
+  </data>
+  <data name="MIN VALUE" xml:space="preserve">
+    <value>Valore Minimo</value>
+  </data>
+  <data name="TREND" xml:space="preserve">
+    <value>Grafico</value>
+  </data>
+  <data name="OFF" xml:space="preserve">
+    <value>Spento</value>
+  </data>
+  <data name="ON" xml:space="preserve">
+    <value>Acceso</value>
+  </data>
+  <data name="ACTIVE EVENTS" xml:space="preserve">
+    <value>Eventi Attuali</value>
+  </data>
+  <data name="LOGGED EVENTS" xml:space="preserve">
+    <value>Eventi Registrati</value>
+  </data>
+  <data name="DELETE GROUP" xml:space="preserve">
+    <value>Elimina Gruppo</value>
+  </data>
+  <data name="BACK" xml:space="preserve">
+    <value>Indietro</value>
+  </data>
+  <data name="FAULTS AND MESSAGES" xml:space="preserve">
+    <value>Allarmi e Messaggi</value>
+  </data>
+  <data name="SIGNALS" xml:space="preserve">
+    <value>Segnali</value>
+  </data>
+  <data name="TEMPERATURE" xml:space="preserve">
+    <value>Temperatura</value>
+  </data>
+  <data name="ACTUAL TEMPERATURE" xml:space="preserve">
+    <value>Temperature Attuale</value>
+  </data>
+  <data name="_AUTOMATIC_MODE" xml:space="preserve">
+    <value>Modalità Automatica</value>
+  </data>
+  <data name="_DISABLED_MODE" xml:space="preserve">
+    <value>Modalità Disabilitata</value>
+  </data>
+  <data name="_ESTOP_OK" xml:space="preserve">
+    <value>Emergenza Non OK</value>
+  </data>
+  <data name="_MAINTENANCE_MODE" xml:space="preserve">
+    <value>Modalità Manutenzione</value>
+  </data>
+  <data name="_PRODUCTION_CYCLE" xml:space="preserve">
+    <value>Ciclo Produzione</value>
+  </data>
+  <data name="_STOP_CYCLE_ON" xml:space="preserve">
+    <value>Stop Ciclo</value>
+  </data>
+  <data name="_STOP_CYCLE_PENDING" xml:space="preserve">
+    <value>Stop Ciclo in attesa</value>
+  </data>
+  <data name="_ZONE_PREPARED" xml:space="preserve">
+    <value>Zona Preparata</value>
+  </data>
+  <data name="YES" xml:space="preserve">
+    <value>Si</value>
+  </data>
+  <data name="NO" xml:space="preserve">
+    <value>No</value>
+  </data>
+  <data name="DO YOU CONFIRM?" xml:space="preserve">
+    <value>Confermi?</value>
   </data>
 </root>
