--- a/Prevu.Localization/Properties/Resources.zh.resx
+++ b/Prevu.Localization/Properties/Resources.zh.resx
@@ -118,13 +118,13 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="GRINDING" xml:space="preserve">
-    <value>打磨 </value>
+    <value>研磨</value>
   </data>
   <data name="PLANT CONTROL" xml:space="preserve">
-    <value>工厂控制</value>
+    <value>植物控制</value>
   </data>
   <data name="SYNOPTIC PAGE MISSING!" xml:space="preserve">
-    <value>概要页面缺失！</value>
+    <value>天气的 页面丢失！</value>
   </data>
   <data name="CURRENT EVENTS" xml:space="preserve">
     <value>现在发生的事</value>
@@ -139,7 +139,7 @@
     <value>打开本地断开连接</value>
   </data>
   <data name="EMERGENCY BUTTON PRESSED" xml:space="preserve">
-    <value>按下紧急按钮</value>
+    <value>紧急按钮按下</value>
   </data>
   <data name="SELECT OPERATING MODE" xml:space="preserve">
     <value>选择操作模式</value>
@@ -151,7 +151,7 @@
     <value>时间结束</value>
   </data>
   <data name="EVENTS" xml:space="preserve">
-    <value>大事记</value>
+    <value>活动</value>
   </data>
   <data name="OK" xml:space="preserve">
     <value>好的</value>
@@ -162,8 +162,8 @@
   <data name="CHOOSE DATE" xml:space="preserve">
     <value>选择日期</value>
   </data>
-  <data name="PET_CLEAR" xml:space="preserve">
-    <value>透明PET</value>
+  <data name="CLEAR PET" xml:space="preserve">
+    <value>清除宠物</value>
   </data>
   <data name="DISABLE" xml:space="preserve">
     <value>禁用</value>
@@ -174,8 +174,8 @@
   <data name="CHOOSE THE ACTION" xml:space="preserve">
     <value>选择动作</value>
   </data>
-  <data name="PLANT LINE 2" xml:space="preserve">
-    <value>2号线</value>
+  <data name="PLANT LINE" xml:space="preserve">
+    <value>植物线</value>
   </data>
   <data name="PRODUCTION LINE" xml:space="preserve">
     <value>生产线</value>
@@ -184,31 +184,31 @@
     <value>重启</value>
   </data>
   <data name="ACKNOWLEDGE ALL" xml:space="preserve">
-    <value>确认全部</value>
+    <value>承认所有</value>
   </data>
   <data name="ACKNOWLEDGE" xml:space="preserve">
     <value>承认</value>
   </data>
   <data name="PLC" xml:space="preserve">
-    <value>可编程逻辑控制器</value>
+    <value>PLC</value>
   </data>
   <data name="MACHINE MAP" xml:space="preserve">
-    <value>机器图</value>
+    <value>机地图</value>
   </data>
   <data name="TRENDS" xml:space="preserve">
-    <value>发展趋势</value>
+    <value>趋势</value>
   </data>
   <data name="USER MANAGEMENT" xml:space="preserve">
     <value>用户管理</value>
   </data>
   <data name="FAULTS" xml:space="preserve">
-    <value>缺点</value>
+    <value>缺陷</value>
   </data>
   <data name="MESSAGES" xml:space="preserve">
-    <value>留言内容</value>
+    <value>消息</value>
   </data>
   <data name="COMMANDS" xml:space="preserve">
-    <value>指令</value>
+    <value>命令</value>
   </data>
   <data name="PARAMETERS" xml:space="preserve">
     <value>参数</value>
@@ -220,7 +220,7 @@
     <value>实际的</value>
   </data>
   <data name="LOGGED" xml:space="preserve">
-    <value>已记录</value>
+    <value>记录一下</value>
   </data>
   <data name="ACTIVE" xml:space="preserve">
     <value>积极的</value>
@@ -232,7 +232,7 @@
     <value>确认</value>
   </data>
   <data name="COMPONENTS" xml:space="preserve">
-    <value>组件</value>
+    <value>成分</value>
   </data>
   <data name="SEARCH" xml:space="preserve">
     <value>搜索</value>
@@ -256,22 +256,22 @@
     <value>选择趋势</value>
   </data>
   <data name="SWITCH VIEW" xml:space="preserve">
-    <value>切换检视</value>
+    <value>开关视图</value>
   </data>
   <data name="CLEAR ALL" xml:space="preserve">
-    <value>全部清除</value>
+    <value>清除所有</value>
   </data>
   <data name="SAVE" xml:space="preserve">
-    <value>保存</value>
+    <value>节省</value>
   </data>
   <data name="WIRELESS CARD" xml:space="preserve">
-    <value>无线网卡</value>
+    <value>无线卡</value>
   </data>
   <data name="CHANGE WIRELESS CARD" xml:space="preserve">
-    <value>更换无线网卡</value>
+    <value>更改无线卡</value>
   </data>
   <data name="PLACE THE NEW CARD ON THE READER" xml:space="preserve">
-    <value>将新卡放在读卡器上</value>
+    <value>将新卡放在读者身上</value>
   </data>
   <data name="DELETE USER" xml:space="preserve">
     <value>删除用户</value>
@@ -283,16 +283,16 @@
     <value>添加</value>
   </data>
   <data name="COPY FROM USER" xml:space="preserve">
-    <value>从用户复制</value>
+    <value>复制用户</value>
   </data>
   <data name="USER NAME" xml:space="preserve">
     <value>用户名</value>
   </data>
   <data name="CREATE NEW USER" xml:space="preserve">
-    <value>建立新使用者</value>
+    <value>创建新用户</value>
   </data>
   <data name="USERS" xml:space="preserve">
-    <value>用户数</value>
+    <value>用户</value>
   </data>
   <data name="MANAGE USER" xml:space="preserve">
     <value>管理用户</value>
@@ -314,5 +314,68 @@
   </data>
   <data name="SYSTEM PERMISSIONS" xml:space="preserve">
     <value>系统权限</value>
+  </data>
+  <data name="START PROCESS" xml:space="preserve">
+    <value>开始过程</value>
+  </data>
+  <data name="VIEW" xml:space="preserve">
+    <value>看法</value>
+  </data>
+  <data name="SETTINGS" xml:space="preserve">
+    <value>设置</value>
+  </data>
+  <data name="PLANT" xml:space="preserve">
+    <value>植物</value>
+  </data>
+  <data name="GROUP" xml:space="preserve">
+    <value>团体</value>
+  </data>
+  <data name="LINE" xml:space="preserve">
+    <value>线</value>
+  </data>
+  <data name="ZONE" xml:space="preserve">
+    <value>区</value>
+  </data>
+  <data name="CABINET" xml:space="preserve">
+    <value>内阁</value>
+  </data>
+  <data name="SUBZONE" xml:space="preserve">
+    <value>子区</value>
+  </data>
+  <data name="LEVEL" xml:space="preserve">
+    <value>等级</value>
+  </data>
+  <data name="ACTUAL SPEED" xml:space="preserve">
+    <value>实际速度</value>
+  </data>
+  <data name="ACTUAL CURRENT" xml:space="preserve">
+    <value>实际电流</value>
+  </data>
+  <data name="ACTUAL LEVEL" xml:space="preserve">
+    <value>实际水平</value>
+  </data>
+  <data name="CURRENT" xml:space="preserve">
+    <value>当前的</value>
+  </data>
+  <data name="SPEED" xml:space="preserve">
+    <value>速度</value>
+  </data>
+  <data name="ZONE VIEW" xml:space="preserve">
+    <value>区域视图</value>
+  </data>
+  <data name="CREATE NEW GROUP" xml:space="preserve">
+    <value>创建新组</value>
+  </data>
+  <data name="COPY FROM GROUP" xml:space="preserve">
+    <value>复制组</value>
+  </data>
+  <data name="GROUP NAME" xml:space="preserve">
+    <value>团队名字</value>
+  </data>
+  <data name="MANAGE GROUP" xml:space="preserve">
+    <value>管理团体</value>
+  </data>
+  <data name="DRYERS" xml:space="preserve">
+    <value>烘干机</value>
   </data>
 </root>
