--- a/Prevu.Localization/Properties/Resources.resx
+++ b/Prevu.Localization/Properties/Resources.resx
@@ -471,28 +471,28 @@
   <data name="ACTUAL TEMPERATURE" xml:space="preserve">
     <value>Actual Temperature</value>
   </data>
-  <data name="_ESTOP_OK" xml:space="preserve">
-    <value>Estop Not Ok</value>
+  <data name="ESTOP OK" xml:space="preserve">
+    <value>Estop Ok</value>
   </data>
-  <data name="_DISABLED_MODE" xml:space="preserve">
+  <data name="DISABLED MODE" xml:space="preserve">
     <value>Disabled Mode</value>
   </data>
-  <data name="_MAINTENANCE_MODE" xml:space="preserve">
+  <data name="MAINTENANCE MODE" xml:space="preserve">
     <value>Maintenance Mode</value>
   </data>
-  <data name="_AUTOMATIC_MODE" xml:space="preserve">
+  <data name="AUTOMATIC MODE" xml:space="preserve">
     <value>Automatic Mode</value>
   </data>
-  <data name="_PRODUCTION_CYCLE" xml:space="preserve">
+  <data name="PRODUCTION CYCLE" xml:space="preserve">
     <value>Production Cycle</value>
   </data>
-  <data name="_ZONE_PREPARED" xml:space="preserve">
+  <data name="ZONE PREPARED" xml:space="preserve">
     <value>Zone Prepared</value>
   </data>
-  <data name="_STOP_CYCLE_ON" xml:space="preserve">
+  <data name="STOP CYCLE ON" xml:space="preserve">
     <value>Stop Cycle</value>
   </data>
-  <data name="_STOP_CYCLE_PENDING" xml:space="preserve">
+  <data name="STOP CYCLE PENDING" xml:space="preserve">
     <value>Stop Cycle Pending</value>
   </data>
   <data name="INFO_SYS_1" xml:space="preserve">
@@ -972,7 +972,7 @@
     <comment>InfoText Fault</comment>
   </data>
   <data name="INFO_RES_1" xml:space="preserve">
-    <value>Safety Thermistor Tripped ! Check The Dryer For Any Possible Material Blockage, Thermoregualtion, Air Filter…</value>
+    <value>Safety Thermistor Tripped ! Check The Dryer For Any Possible Material Blockage, Thermoregualtion, Air Filter...</value>
     <comment>InfoText Fault</comment>
   </data>
   <data name="INFO_RES_2" xml:space="preserve">
@@ -1255,5 +1255,8 @@
   </data>
   <data name="DO YOU CONFIRM?" xml:space="preserve">
     <value>Do you Confirm?</value>
+  </data>
+  <data name="ESTOP NOT OK" xml:space="preserve">
+    <value>Estop Not Ok</value>
   </data>
 </root>
