--- a/Prevu.Localization/Properties/Resources.it.resx
+++ b/Prevu.Localization/Properties/Resources.it.resx
@@ -504,4 +504,10 @@
   <data name="DO YOU CONFIRM?" xml:space="preserve">
     <value>Confermi?</value>
   </data>
+  <data name="TO BAG" xml:space="preserve">
+    <value>Verso il sacco</value>
+  </data>
+  <data name="TO EXTERNAL" xml:space="preserve">
+    <value>Verso l'esterno</value>
+  </data>
 </root>
