--- a/Prevu.Localization/Properties/Resources.resx
+++ b/Prevu.Localization/Properties/Resources.resx
@@ -1256,4 +1256,10 @@
   <data name="DO YOU CONFIRM?" xml:space="preserve">
     <value>Do you Confirm?</value>
   </data>
+  <data name="TO EXTERNAL" xml:space="preserve">
+    <value>To External</value>
+  </data>
+  <data name="TO BAG" xml:space="preserve">
+    <value>To Bag</value>
+  </data>
 </root>
