--- a/Prevu.Localization/Properties/Resources.resx
+++ b/Prevu.Localization/Properties/Resources.resx
@@ -1183,10 +1183,6 @@
     <value>Check The Shaft Oil Sealing System And Restart The Motor</value>
     <comment>InfoText Fault</comment>
   </data>
-  <data name="INFO_OIL_SEAL_3" xml:space="preserve">
-    <value>Refill The Sealing Oil Or Motor Will Be Stopped Within One Hour</value>
-    <comment>InfoText Fault</comment>
-  </data>
   <data name="INFO_OIL_SEAL_4" xml:space="preserve">
     <value>Check The Shaft Oil Sealing System  And Restart The Motor</value>
     <comment>InfoText Fault</comment>
@@ -1261,5 +1257,35 @@
   </data>
   <data name="TO BAG" xml:space="preserve">
     <value>To Bag</value>
+  </data>
+  <data name="RELEASE" xml:space="preserve">
+    <value>Release</value>
+  </data>
+  <data name="LOCK" xml:space="preserve">
+    <value>Lock</value>
+  </data>
+  <data name="TREND PAGE" xml:space="preserve">
+    <value>Trend Page</value>
+  </data>
+  <data name="MISSING SYNOPTIC" xml:space="preserve">
+    <value>Missing Synoptic</value>
+  </data>
+  <data name="NOW" xml:space="preserve">
+    <value>Now</value>
+  </data>
+  <data name="CYCLES" xml:space="preserve">
+    <value>Cycles</value>
+  </data>
+  <data name="OPEN" xml:space="preserve">
+    <value>Open</value>
+  </data>
+  <data name="CYCLE STEPS" xml:space="preserve">
+    <value>Cycle Steps</value>
+  </data>
+  <data name="DATA" xml:space="preserve">
+    <value>Data</value>
+  </data>
+  <data name="INTERLOCKS" xml:space="preserve">
+    <value>Interlocks</value>
   </data>
 </root>
