--- a/Prevu.Localization/Properties/Resources.resx
+++ b/Prevu.Localization/Properties/Resources.resx
@@ -406,7 +406,7 @@
     <value>Limits</value>
   </data>
   <data name="5 MINUTES" xml:space="preserve">
-    <value>5 Minuts</value>
+    <value>5 Minutes</value>
   </data>
   <data name="15 MINUTES" xml:space="preserve">
     <value>15 Minutes</value>
@@ -472,28 +472,36 @@
     <value>Actual Temperature</value>
   </data>
   <data name="_ESTOP_OK" xml:space="preserve">
-    <value>Estop Not Ok</value>
+    <value>Estop Ok</value>
+    <comment>Subzone Status</comment>
   </data>
   <data name="_DISABLED_MODE" xml:space="preserve">
     <value>Disabled Mode</value>
+    <comment>Subzone Status</comment>
   </data>
   <data name="_MAINTENANCE_MODE" xml:space="preserve">
     <value>Maintenance Mode</value>
+    <comment>Subzone Status</comment>
   </data>
   <data name="_AUTOMATIC_MODE" xml:space="preserve">
     <value>Automatic Mode</value>
+    <comment>Subzone Status</comment>
   </data>
   <data name="_PRODUCTION_CYCLE" xml:space="preserve">
     <value>Production Cycle</value>
+    <comment>Subzone Status</comment>
   </data>
   <data name="_ZONE_PREPARED" xml:space="preserve">
     <value>Zone Prepared</value>
+    <comment>Subzone Status</comment>
   </data>
   <data name="_STOP_CYCLE_ON" xml:space="preserve">
     <value>Stop Cycle</value>
+    <comment>Subzone Status</comment>
   </data>
   <data name="_STOP_CYCLE_PENDING" xml:space="preserve">
     <value>Stop Cycle Pending</value>
+    <comment>Subzone Status</comment>
   </data>
   <data name="INFO_SYS_1" xml:space="preserve">
     <value></value>
@@ -1287,5 +1295,60 @@
   </data>
   <data name="INTERLOCKS" xml:space="preserve">
     <value>Interlocks</value>
+  </data>
+  <data name="_ESTOP_NOT_OK" xml:space="preserve">
+    <value>Estop Not Ok</value>
+    <comment>Subzone Status</comment>
+  </data>
+  <data name="_PREPARED" xml:space="preserve">
+    <value>Prepared</value>
+    <comment>Subzone Status</comment>
+  </data>
+  <data name="_PROD_CYCLE_PENDING" xml:space="preserve">
+    <value>Production Cycle Pending</value>
+    <comment>Subzone Status</comment>
+  </data>
+  <data name="_LD" xml:space="preserve">
+    <value>Local Disconnect</value>
+    <comment>Component Status</comment>
+  </data>
+  <data name="_NOT_OK" xml:space="preserve">
+    <value>Not Ok</value>
+    <comment>Component Status</comment>
+  </data>
+  <data name="_START_DISABLED" xml:space="preserve">
+    <value>Start Disabled</value>
+    <comment>Component Status</comment>
+  </data>
+  <data name="_READY" xml:space="preserve">
+    <value>Ready</value>
+    <comment>Component Status</comment>
+  </data>
+  <data name="_CMD_ON" xml:space="preserve">
+    <value>Command ON</value>
+    <comment>Component Status</comment>
+  </data>
+  <data name="_RUNNING" xml:space="preserve">
+    <value>Running</value>
+    <comment>Component Status</comment>
+  </data>
+  <data name="_ALARM_CRITICAL" xml:space="preserve">
+    <value>Critical Alarm</value>
+    <comment>Component Status</comment>
+  </data>
+  <data name="_ALARM_NON_CRITICAL" xml:space="preserve">
+    <value>Non-Critical Alarm</value>
+    <comment>Component Status</comment>
+  </data>
+  <data name="_MESSAGE" xml:space="preserve">
+    <value>Message</value>
+    <comment>Component Status</comment>
+  </data>
+  <data name="_NEW_ALARM" xml:space="preserve">
+    <value>New Alarm</value>
+    <comment>Component Status</comment>
+  </data>
+  <data name="" xml:space="preserve">
+    <value></value>
   </data>
 </root>
